# ChuvashFSP

./: .gitignore  .replit  package-lock.json  package.json  pyproject.toml  replit.md
backend/: main.py  requirements.txt
backend/app/: __init__.py  config.py  database.py  schemas.py  seed_data.py
backend/app/models/: models.py
backend/app/routes/: auth.py  contact.py  documents.py  events.py  leadership.py  news.py  team.py
backend/app/services/: telegram_parser.py
backend/app/utils/: auth.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AdminLayout.jsx  CustomCursor.jsx  Footer.jsx  Header.jsx  Layout.jsx  LoadingScreen.jsx  SectionTitle.jsx
frontend/src/context/: ThemeContext.jsx
frontend/src/pages/: Contacts.jsx  Documents.jsx  Events.jsx  Home.jsx  Leadership.jsx  News.jsx  NewsDetail.jsx  Team.jsx
frontend/src/pages/admin/: AdminDashboard.jsx  AdminDocuments.jsx  AdminEvents.jsx  AdminLeadership.jsx  AdminLogin.jsx  AdminMessages.jsx  AdminNews.jsx  AdminTeam.jsx
frontend/src/utils/: api.js
